--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "fsevents": "^2.0.0"
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-prettier": "^3.1.0",
+    "fsevents": "^2.0.0",
+    "prettier": "^1.18.2"
   },
   "browserslist": {
     "production": [
