--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "node-uuid": "^1.4.8",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^7.0.0",
