--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
     "node-uuid": "^1.4.8",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^7.0.0",
     "react-scripts": "^3.0.0",
+    "react-test-renderer": "^16.11.0",
     "redux": "^4.0.0"
   },
   "scripts": {
