--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "test:debug": "react-scripts --inspect-brk test --runInBand --no-cache",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
     "eslint": "^6.7.2",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.5.0",
@@ -32,7 +34,9 @@
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-react-hooks": "^1.7.0",
     "fsevents": "^2.1.2",
-    "prettier": "^1.19.1"
+    "jest-dashboard": "^0.3.1",
+    "prettier": "^1.19.1",
+    "redux-mock-store": "^1.5.4"
   },
   "browserslist": {
     "production": [
