--- a/package.json
+++ b/package.json
@@ -3,15 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.7.3",
+    "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.4.3",
-    "@reduxjs/toolkit": "^1.8.5",
     "babel-eslint": "^10.1.0",
     "bootstrap": "^5.2.2",
     "flow-bin": "^0.186.0",
+    "graphql": "^16.6.0",
     "node-sass": "^7.0.1",
-    "uuid": "^9.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -19,6 +20,7 @@
     "react-router-dom": "^6.4.2",
     "redux": "^4.0.0",
     "source-map-explorer": "^2.5.3",
+    "uuid": "^9.0.0",
     "web-vitals": "^3.0.1"
   },
   "devDependencies": {
