--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.4.0",
+    "@types/node": "^18.14.0",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "babel-eslint": "^10.1.0",
     "bootstrap": "^5.2.2",
     "flow-bin": "^0.186.0",
@@ -20,11 +24,15 @@
     "react-router-dom": "^6.4.2",
     "redux": "^4.0.0",
     "source-map-explorer": "^2.5.3",
+    "typescript": "^4.9.5",
     "uuid": "^9.0.0",
     "web-vitals": "^3.0.1"
   },
   "devDependencies": {
-    "react-scripts": "5.0.1"
+    "@types/redux-mock-store": "^1.0.3",
+    "@types/uuid": "^9.0.0",
+    "react-scripts": "5.0.1",
+    "redux-mock-store": "^1.5.4"
   },
   "scripts": {
     "start": "react-scripts start",
