--- a/package.json
+++ b/package.json
@@ -3,15 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.7.3",
     "@reduxjs/toolkit": "^1.8.5",
+    "@rtk-query/graphql-request-base-query": "^2.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.4.0",
+    "@types/node": "^18.14.0",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "babel-eslint": "^10.1.0",
     "bootstrap": "^5.2.2",
     "flow-bin": "^0.186.0",
     "graphql": "^16.6.0",
+    "msw": "^1.0.1",
     "node-sass": "^7.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -20,11 +25,15 @@
     "react-router-dom": "^6.4.2",
     "redux": "^4.0.0",
     "source-map-explorer": "^2.5.3",
+    "typescript": "^4.9.5",
     "uuid": "^9.0.0",
     "web-vitals": "^3.0.1"
   },
   "devDependencies": {
-    "react-scripts": "5.0.1"
+    "@types/redux-mock-store": "^1.0.3",
+    "@types/uuid": "^9.0.0",
+    "react-scripts": "5.0.1",
+    "redux-mock-store": "^1.5.4"
   },
   "scripts": {
     "start": "react-scripts start",
