--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@types/redux-mock-store": "^1.0.3",
     "@types/uuid": "^9.0.0",
+    "jest-localstorage-mock": "^2.4.26",
     "react-scripts": "5.0.1",
     "redux-mock-store": "^1.5.4"
   },
