--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,13 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .idea/
+.env
+.env.*
+solr/data
+solr/test/data
+solr/development/data
+solr/default/data
+solr/pids
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
