--- a/package.json
+++ b/package.json
@@ -3,37 +3,38 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.8.5",
-    "@rtk-query/graphql-request-base-query": "^2.2.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^29.4.0",
-    "@types/node": "^18.14.0",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "babel-eslint": "^10.1.0",
-    "bootstrap": "^5.2.2",
-    "flow-bin": "^0.186.0",
-    "graphql": "^16.6.0",
-    "msw": "^1.0.1",
-    "node-sass": "^7.0.1",
+    "@reduxjs/toolkit": "^2.2.7",
+    "@rtk-query/graphql-request-base-query": "^2.3.0",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.4.8",
+    "@testing-library/react": "^16.0.0",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^22.1.0",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "ajv": "^8.17.1",
+    "bootstrap": "^5.3.3",
+    "flow-bin": "^0.242.1",
+    "graphql": "^16.9.0",
+    "msw": "^2.3.5",
     "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.4.2",
-    "redux": "^4.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.0",
+    "redux": "^5.0.1",
+    "sass": "^1.77.8",
     "source-map-explorer": "^2.5.3",
     "typescript": "^4.9.5",
-    "uuid": "^9.0.0",
-    "web-vitals": "^3.0.1"
+    "uuid": "^10.0.0",
+    "web-vitals": "^4.2.3"
   },
   "devDependencies": {
-    "@types/redux-mock-store": "^1.0.3",
-    "@types/uuid": "^9.0.0",
+    "@types/redux-mock-store": "^1.0.6",
+    "@types/uuid": "^10.0.0",
     "jest-localstorage-mock": "^2.4.26",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "redux-mock-store": "^1.5.4"
   },
   "scripts": {
