--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "react-playground",
   "version": "0.1.0",
-  "homepage": "https://emiltrotuar.github.io/react-playground",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
@@ -26,6 +25,7 @@
     "react-router-dom": "^6.26.0",
     "redux": "^5.0.1",
     "sass": "^1.77.8",
+    "serve": "^14.2.5",
     "source-map-explorer": "^2.5.3",
     "typescript": "^4.9.5",
     "uuid": "^10.0.0",
@@ -34,7 +34,6 @@
   "devDependencies": {
     "@types/redux-mock-store": "^1.0.6",
     "@types/uuid": "^10.0.0",
-    "gh-pages": "^6.3.0",
     "jest-localstorage-mock": "^2.4.26",
     "react-scripts": "^5.0.1",
     "redux-mock-store": "^1.5.4"
@@ -43,9 +42,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
